--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -27,7 +27,8 @@
     "@sentry/node": "^7.60.0",
     "knex": "^2.4.0",
     "knex-paginate": "^3.1.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
