--- a/services/rss/tsconfig.json
+++ b/services/rss/tsconfig.json
@@ -110,5 +110,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["../../library/db.ts", "../../library/content.ts", "./**/*"]
+  "include": ["../../library/db.ts", "../../library/content.ts"]
 }
