--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -9,17 +9,26 @@
   "scripts": {
     "create-env": "printenv > .env",
     "start": "node -r tsconfig-paths/register -r ts-node/register ./index.ts",
-    "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\""
+    "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
+    "build": "npx tsc"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express-async-handler": "^1.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "body-parser": "^1.19.0",
+    "compression": "1.7.4",
+    "helmet": "^3.22.0",
     "loglevel": "^1.7.1",
     "podcast": "^2.0.1",
-    "@sentry/node": "^7.60.0"
+    "@sentry/node": "^7.60.0",
+    "knex": "^2.4.0",
+    "knex-paginate": "^3.1.1",
+    "uuid": "^9.0.1",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
