--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,6 @@ NPUB_UPDATE_SERVICE_URL=localhost:port
 # Nostr
 NOSTR_SECRET=xxxxx
 WAVLAKE_RELAY=ws://localhost:8008
+
+# used by Next API serverless functions
+API_AUTH_CLIENT_KEY=test-key
