--- a/services/accounting/.env.example
+++ b/services/accounting/.env.example
@@ -29,3 +29,6 @@ ACCOUNTING_CALLBACK_URL=https://example.com/v1/callback
 # NOSTR
 NOSTR_SECRET=xxxx
 WAVLAKE_RELAY=ws://localhost:8008
+
+# used by Next API serverless functions
+API_AUTH_CLIENT_KEY=test-key
