--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "express-async-handler": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
