--- a/services/nwc/package.json
+++ b/services/nwc/package.json
@@ -14,19 +14,20 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^4.15.0",
     "@node-lightning/invoice": "^0.28.0",
+    "@prisma/client": "^4.15.0",
     "dotenv": "^16.1.3",
+    "express-slow-down": "^2.0.3",
+    "knex": "^2.4.0",
     "loglevel": "^1.7.1",
     "nostr-tools": "^2.5.2",
-    "websocket-polyfill": "^0.0.3",
-    "knex": "^2.4.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
