--- a/services/rss/tsconfig.json
+++ b/services/rss/tsconfig.json
@@ -32,7 +32,8 @@
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@library/db": ["../../library/db.ts"],
-      "@library/content": ["../../library/content.ts"]
+      "@library/content": ["../../library/content.ts"],
+      "@library/rssUtils": ["../../library/rssUtils.js"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
@@ -110,5 +111,9 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["../../library/db.ts", "../../library/content.ts"]
+  "include": [
+    "../../library/db.ts",
+    "../../library/content.ts",
+    "../../library/rssUtils.js"
+  ]
 }
