--- a/services/indexer/package.json
+++ b/services/indexer/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "dotenv": "^16.1.3",
+    "knex": "^3.1.0",
     "loglevel": "^1.7.1",
+    "minimist": "^1.2.8",
     "nostr-tools": "^2.5.2",
+    "sqlite3": "^5.1.7",
     "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
