--- a/cronjobs/forwarder/package.json
+++ b/cronjobs/forwarder/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "=v16.20.0"
+    "node": ">=20.17.0 <21"
   },
   "scripts": {
     "create-env": "printenv > .env",
@@ -14,7 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^5.20.0",
     "axios": "^1.6.2",
     "dotenv": "^16.1.3",
     "loglevel": "^1.7.1",
@@ -27,7 +27,7 @@
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
-    "prisma": "^4.15.0",
+    "prisma": "^5.20.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   },
