--- a/cronjobs/log-charts/package.json
+++ b/cronjobs/log-charts/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "=v16.20.0"
+    "node": ">=20.17.0 <21"
   },
   "scripts": {
     "start": "node index.js",
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.1.3",
-    "knex": "^2.4.0",
+    "knex": "^2.5.1",
     "pg": "^8.7.1",
     "loglevel": "^1.7.1"
   },
