--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Express API for managing and accessing the Wavlake catalog",
   "main": "index.js",
   "engines": {
-    "node": "=v16.20.0"
+    "node": ">=20.17.0 <21"
   },
   "scripts": {
     "test": "jest --testPathIgnorePatterns=\"integration\"",
@@ -23,7 +23,7 @@
   "dependencies": {
     "@noble/hashes": "^1.3.2",
     "@podverse/podcast-feed-parser": "https://github.com/joshr4/podcast-feed-parser/tree/add-time-split-support",
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^5.20.0",
     "@sentry/node": "^7.60.0",
     "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1395.0",
@@ -32,15 +32,15 @@
     "compression": "1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
-    "express": "^4.18.2",
+    "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
     "firebase-admin": "^11.9.0",
     "helmet": "^3.22.0",
-    "jimp": "^0.22.8",
-    "knex": "^2.4.0",
-    "knex-paginate": "^3.1.1",
-    "loglevel": "^1.7.1",
+    "jimp": "^1.6.0",
+    "knex": "^2.5.1",
+    "knex-paginate": "^3.1.4",
+    "loglevel": "^1.9.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "node-lame": "^1.3.2",
@@ -48,7 +48,7 @@
     "oauth": "^0.10.0",
     "pg": "^8.7.1",
     "podcast-index-api": "^1.1.10",
-    "sanitize-html": "^2.11.0",
+    "sanitize-html": "^2.13.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.1",
     "ws": "^8.17.0"
@@ -57,14 +57,14 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.22.15",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.2.5",
     "babel-jest": "^29.7.0",
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
-    "prisma": "^4.15.0",
+    "prisma": "^5.20.0",
     "typescript": "^5.1.3"
   }
 }
