--- a/services/accounting/package.json
+++ b/services/accounting/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "=v16.20.0"
+    "node": ">=20.17.0 <21"
   },
   "scripts": {
     "create-env": "printenv > .env",
@@ -14,25 +14,25 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^5.20.0",
     "@sentry/node": "^7.60.0",
     "@node-lightning/invoice": "^0.28.0",
     "express-async-handler": "^1.2.0",
     "dotenv": "^16.1.3",
-    "express": "^4.18.2",
+    "express": "^4.21.0",
     "loglevel": "^1.7.1",
     "nostr-tools": "^2.5.2",
     "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
     "@types/node": "^20.2.5",
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
-    "prisma": "^4.15.0",
+    "prisma": "^5.20.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   },
