--- a/services/npub-metadata/package.json
+++ b/services/npub-metadata/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "=v16.20.0"
+    "node": ">=20.17.0 <21"
   },
   "scripts": {
     "create-env": "printenv > .env",
@@ -14,9 +14,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^5.20.0",
     "dotenv": "^16.1.3",
-    "express": "^4.18.2",
+    "express": "^4.21.0",
     "loglevel": "^1.7.1",
     "nostr-tools": "^2.5.2",
     "podcast-index-api": "^1.1.10",
@@ -29,7 +29,7 @@
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
-    "prisma": "^4.15.0",
+    "prisma": "^5.20.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   },
