--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "=v16.20.0"
+    "node": ">=20.17.0 <21"
   },
   "scripts": {
     "create-env": "printenv > .env",
@@ -15,18 +15,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^5.20.0",
     "express-async-handler": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
-    "express": "^4.18.2",
+    "express": "^4.21.0",
     "body-parser": "^1.19.0",
     "compression": "1.7.4",
     "helmet": "^3.22.0",
     "loglevel": "^1.7.1",
     "podcast": "^2.0.1",
     "@sentry/node": "^7.60.0",
-    "knex": "^2.4.0",
+    "knex": "^2.5.1",
     "knex-paginate": "^3.1.1",
     "uuid": "^9.0.1",
     "pg": "^8.7.1"
