--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,6 +1,5 @@
-# Image stored at Docker: blastshielddown/wavlake-catalog
 # Used only in build step
-FROM node:20.17.0-slim
+FROM node:20.17.0
 
 # Install Python 3
 RUN apt-get update && apt-get install -y python3 python3-pip
