--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "node-lame": "^1.3.2",
+    "node-vibrant": "^3.2.1-alpha.1",
     "nostr-tools": "^2.5.2",
     "oauth": "^0.10.0",
     "pg": "^8.7.1",
