--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-rate-limit": "^7.1.5",
     "firebase-admin": "^11.9.0",
     "helmet": "^3.22.0",
+    "jdenticon": "^3.3.0",
     "jimp": "^1.6.0",
     "knex": "^2.5.1",
     "knex-paginate": "^3.1.4",
