--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.22.15",
+    "@google-cloud/logging-winston": "^6.0.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.2.5",
@@ -67,6 +68,7 @@
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
     "prisma": "^5.20.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "winston": "^3.17.0"
   }
 }
