--- a/services/nwc/package.json
+++ b/services/nwc/package.json
@@ -8,21 +8,22 @@
   },
   "scripts": {
     "create-env": "printenv > .env",
+    "build": "tsc && tsc-alias",
     "start": "node -r tsconfig-paths/register -r ts-node/register ./index.ts",
     "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\""
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.20.0",
+    "@google-cloud/logging-winston": "^6.0.0",
     "@node-lightning/invoice": "^0.28.0",
+    "@prisma/client": "^5.20.0",
     "dotenv": "^16.1.3",
+    "knex": "^2.5.1",
     "loglevel": "^1.7.1",
     "nostr-tools": "^2.5.2",
-    "websocket-polyfill": "^0.0.3",
-    "knex": "^2.5.1",
     "pg": "^8.7.1",
-    "@google-cloud/logging-winston": "^6.0.0",
+    "websocket-polyfill": "^0.0.3",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -33,6 +34,8 @@
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
     "prisma": "^5.20.0",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.11",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   },
