--- a/services/nwc/package.json
+++ b/services/nwc/package.json
@@ -18,6 +18,7 @@
     "@google-cloud/logging-winston": "^6.0.0",
     "@node-lightning/invoice": "^0.28.0",
     "@prisma/client": "^5.20.0",
+    "@sentry/node": "^9.4.0",
     "dotenv": "^16.1.3",
     "knex": "^2.5.1",
     "loglevel": "^1.7.1",
