--- a/services/nwc/package.json
+++ b/services/nwc/package.json
@@ -8,9 +8,10 @@
   },
   "scripts": {
     "create-env": "printenv > .env",
-    "build": "tsc && tsc-alias",
+    "build": "tsc && tsc-alias && npm run sentry:sourcemaps",
     "start": "node -r tsconfig-paths/register -r ts-node/register ./index.ts",
-    "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\""
+    "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org wavlake --project nwc ./dist && sentry-cli sourcemaps upload --org wavlake --project nwc ./dist"
   },
   "author": "",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "@google-cloud/logging-winston": "^6.0.0",
     "@node-lightning/invoice": "^0.28.0",
     "@prisma/client": "^5.20.0",
+    "@sentry/cli": "^2.42.2",
     "@sentry/node": "^9.4.0",
     "dotenv": "^16.1.3",
     "knex": "^2.5.1",
