--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Michael Rhee",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/logging-winston": "^6.0.0",
     "@noble/hashes": "^1.3.2",
     "@podverse/podcast-feed-parser": "https://github.com/joshr4/podcast-feed-parser/tree/add-time-split-support",
     "@prisma/client": "^5.20.0",
@@ -36,6 +37,7 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
     "firebase-admin": "^11.9.0",
+    "fs": "^0.0.1-security",
     "helmet": "^3.22.0",
     "jdenticon": "^3.3.0",
     "jimp": "^1.6.0",
@@ -46,16 +48,15 @@
     "node-fetch": "^2.7.0",
     "node-lame": "^1.3.2",
     "node-vibrant": "^3.2.1-alpha.1",
-    "nostr-tools": "^2.5.2",
+    "nostr-tools": "^2.10.4",
     "oauth": "^0.10.0",
     "pg": "^8.7.1",
     "podcast-index-api": "^1.1.10",
     "sanitize-html": "^2.13.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.1",
-    "ws": "^8.17.0",
-    "@google-cloud/logging-winston": "^6.0.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
