--- a/services/accounting/.env.example
+++ b/services/accounting/.env.example
@@ -24,6 +24,7 @@ GOOGLE_APPLICATION_CREDENTIALS="/credentials.json"
 
 # ZBD
 ZBD_API_KEY=xxxxx
+ZBD_BATTERY_API_KEY=xxxxx
 ACCOUNTING_CALLBACK_URL=https://example.com/v1/callback
 
 # NOSTR
