--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Michael Rhee",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/logging-winston": "^6.0.0",
     "@noble/hashes": "^1.3.2",
     "@podverse/podcast-feed-parser": "https://github.com/joshr4/podcast-feed-parser/tree/add-time-split-support",
     "@prisma/client": "^5.20.0",
@@ -31,7 +32,7 @@
     "body-parser": "^1.19.0",
     "compression": "1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.3",
+    "csv-parser": "^3.2.0",
     "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
@@ -53,9 +54,8 @@
     "sanitize-html": "^2.13.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.1",
-    "ws": "^8.17.0",
-    "@google-cloud/logging-winston": "^6.0.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
