--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "compression": "1.7.4",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.1.3",
     "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
