--- a/services/accounting/package.json
+++ b/services/accounting/package.json
@@ -14,22 +14,23 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/logging-winston": "^6.0.0",
+    "@node-lightning/invoice": "^0.28.0",
     "@prisma/client": "^5.20.0",
     "@sentry/node": "^7.60.0",
-    "@node-lightning/invoice": "^0.28.0",
-    "express-async-handler": "^1.2.0",
     "dotenv": "^16.1.3",
     "express": "^4.21.0",
+    "express-async-handler": "^1.2.0",
     "loglevel": "^1.7.1",
     "nostr-tools": "^2.5.2",
     "websocket-polyfill": "^0.0.3",
-    "@google-cloud/logging-winston": "^6.0.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.2.5",
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
