--- a/cronjobs/forwarder/package.json
+++ b/cronjobs/forwarder/package.json
@@ -18,9 +18,7 @@
     "axios": "^1.6.2",
     "dotenv": "^16.1.3",
     "loglevel": "^1.7.1",
-    "ts-node": "^10.9.2",
-    "@google-cloud/logging-winston": "^6.0.0",
-    "winston": "^3.17.0"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
