--- a/cronjobs/publish-feeds/package.json
+++ b/cronjobs/publish-feeds/package.json
@@ -18,9 +18,7 @@
     "axios": "^1.6.2",
     "dotenv": "^16.1.3",
     "loglevel": "^1.7.1",
-    "podcast-index-api": "^1.1.10",
-    "@google-cloud/logging-winston": "^6.0.0",
-    "winston": "^3.17.0"
+    "podcast-index-api": "^1.1.10"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
