--- a/services/indexer/package.json
+++ b/services/indexer/package.json
@@ -21,9 +21,7 @@
     "minimist": "^1.2.8",
     "nostr-tools": "^2.5.2",
     "sqlite3": "^5.1.7",
-    "websocket-polyfill": "^0.0.3",
-    "@google-cloud/logging-winston": "^6.0.0",
-    "winston": "^3.17.0"
+    "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
