--- a/services/nwc/package.json
+++ b/services/nwc/package.json
@@ -17,7 +17,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@google-cloud/logging-winston": "^6.0.0",
     "@node-lightning/invoice": "^0.28.0",
     "@prisma/client": "^5.20.0",
     "@sentry/cli": "^2.42.2",
@@ -27,8 +26,7 @@
     "loglevel": "^1.7.1",
     "nostr-tools": "^2.5.2",
     "pg": "^8.7.1",
-    "websocket-polyfill": "^0.0.3",
-    "winston": "^3.17.0"
+    "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
